SERVER-25802 DurableViewCatalog::iterate must check pipeline

When iterating through the DurableViewCatalog, check that each view definition
has a "pipeline" field that is an array before applying the callback.